k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-front
  namespace: demo-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-front
  template:
    metadata:
      labels:
        app: demo-front
    spec:
      containers:
        - name: demo-front
          image: gitlab.planet9.uk:5050/i88/i88-frontend:temp4-130
          ports:
            - containerPort: 8082
          resources:
            limits:
              cpu: "2000m"
              memory: "2048Mi"
      imagePullSecrets:
        - name: gitlab-registry
