k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-front
  namespace: demo-front
spec:
  selector:
    app: demo-front
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
