k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-front
  namespace: demo-front
spec:
  rules:
    - host: demo-front.planet9.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-front
                port:
                  number: 8082
